# yde-language

./: .gitignore  CMakeLists.txt  LICENSE  README.md  yde
examples/: divide.yde  fib.yde  for.yde  function.yde  pointer.yde  strings.yde  struct.yde  test.yde  var.yde
examples/others/: divide.yde  test.yde
include/: ast.h  lexer.h  parser.h  sema.h
source/: main.cpp
src/: codeGen.cpp  lexer.cpp  main.cpp  parser.cpp  sema.cpp
